last-minute changes to translation

--- a/share/translation/de/sumwars.po
+++ b/share/translation/de/sumwars.po
@@ -3707,38 +3707,38 @@ msgid "Attacks every enemy in weapon range with a triple sweeping strike."
 msgstr ""
 "Greift jeden Gegner in Reichweite mit einem dreifachen Rundumschlag an."
 
-#~ msgid "Willard"
-#~ msgstr "Willard"
+msgid "Willard"
+msgstr "Willard"
 
-#~ msgid "Who is that?"
-#~ msgstr "Wer ist das?"
+msgid "Who is that?"
+msgstr "Wer ist das?"
 
-#~ msgid "Skinny Necromancer"
-#~ msgstr "Magerer Nekromant"
+msgid "Skinny Necromancer"
+msgstr "Magerer Nekromant"
 
-#~ msgid "Scarfaced Necromancer"
-#~ msgstr "Narbengesichtiger Nekromant"
+msgid "Scarfaced Necromancer"
+msgstr "Narbengesichtiger Nekromant"
 
-#~ msgid "Unknown Lich"
-#~ msgstr "Unbekannter Lich"
+msgid "Unknown Lich"
+msgstr "Unbekannter Lich"
 
-#~ msgid ""
-#~ "Reverse this at once or every guard of Aisen will be on your trail, "
-#~ "Cursed One! ##female"
-#~ msgstr ""
-#~ "Mach das sofort rückgängig oder jede Wache in Aisen wird hinter dir her "
-#~ "sein, Verfluchte!"
+msgid ""
+"Reverse this at once or every guard of Aisen will be on your trail, "
+"Cursed One! ##female"
+msgstr ""
+"Mach das sofort rückgängig oder jede Wache in Aisen wird hinter dir her "
+"sein, Verfluchte!"
 
-#~ msgid ""
-#~ "Reverse this at once or every guard of Aisen will be on your trail, "
-#~ "Cursed One! ##male"
-#~ msgstr ""
-#~ "Mach das sofort rückgängig oder jede Wache in Aisen wird hinter dir her "
-#~ "sein, Verfluchter!"
+msgid ""
+"Reverse this at once or every guard of Aisen will be on your trail, "
+"Cursed One! ##male"
+msgstr ""
+"Mach das sofort rückgängig oder jede Wache in Aisen wird hinter dir her "
+"sein, Verfluchter!"
 
-#~ msgid ""
-#~ "You are better prepared to suffer the consequences, wretched creature."
-#~ msgstr "Du bist besser bereit, die Konsequenzen zu tragen, elende Kreatur."
+msgid ""
+"You are better prepared to suffer the consequences, wretched creature."
+msgstr "Du bist besser bereit, die Konsequenzen zu tragen, elende Kreatur."
 
 #, fuzzy
 #~ msgid "Magician"
@@ -3796,8 +3796,8 @@ msgstr ""
 #~ msgid "slave_overseer"
 #~ msgstr "Ausdauer"
 
-#~ msgid "Better not."
-#~ msgstr "Besser nicht"
+msgid "Better not."
+msgstr "Besser nicht"
 
 #, fuzzy
 #~ msgid "necromancer_siegeDefense"
