--- a/share/translation/de/menu.po
+++ b/share/translation/de/menu.po
@@ -813,26 +813,26 @@ msgstr "Wassermagie"
 msgid "Wind Magic"
 msgstr "Windmagie"
 
-#~ msgid "Attr points"
-#~ msgstr "Punkte"
+msgid "Attr points"
+msgstr "Punkte"
 
-#~ msgid "Attribute points remaining to distribute"
-#~ msgstr "Verbleibende Punkte"
+msgid "Attribute points remaining to distribute"
+msgstr "Verbleibende Punkte"
 
-#~ msgid "Characters"
-#~ msgstr "Charakter Bildschirm"
+msgid "Characters"
+msgstr "Charakter Bildschirm"
 
-#~ msgid "Delete"
-#~ msgstr "Löschen"
+msgid "Delete"
+msgstr "Löschen"
 
-#~ msgid "mage"
-#~ msgstr "Magier"
+msgid "mage"
+msgstr "Magier"
 
-#~ msgid "Savegame"
-#~ msgstr "Gespeichertes Spiel"
+msgid "Savegame"
+msgstr "Gespeichertes Spiel"
 
-#~ msgid "Create Character"
-#~ msgstr "Charakter erstellen"
+msgid "Create Character"
+msgstr "Charakter erstellen"
 
-#~ msgid "Delete Character"
-#~ msgstr "Charakter löschen"
+msgid "Delete Character"
+msgstr "Charakter löschen"
