--- a/share/translation/potfiles/the_poolmonster.pot
+++ b/share/translation/potfiles/the_poolmonster.pot
@@ -1,3 +1,4 @@
+#, fuzzy
 msgid ""
 msgstr ""
 "MIME-Version: 1.0\n"
@@ -6,97 +7,99 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: de\n"
+"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+
 #: scene7.xml:53
-msgid "*Roar!*"
+msgid  "*Roar!*"
 msgstr ""
 
 #: scene7.xml:29
-msgid "..."
+msgid  "..."
 msgstr ""
 
 #: scene7.xml:23
-msgid "... Der Anblick hat mich nur an mein Leben"
+msgid  "... Der Anblick hat mich nur an mein Leben"
 msgstr ""
 
 #: scene7.xml:25
-msgid "... only dimly"
+msgid  "... only dimly"
 msgstr ""
 
 #: scene7.xml:28
-msgid "... only externally."
+msgid  "... only externally."
 msgstr ""
 
 #: scene7.xml:22
-msgid "Are you getting sentimental now?"
+msgid  "Are you getting sentimental now?"
 msgstr ""
 
 #: scene7.xml:33
-msgid "Do you really think that it"
+msgid  "Do you really think that it"
 msgstr ""
 
 #: scene7.xml:24
-msgid "Du kannst dich an dein Leben vor der"
+msgid  "Du kannst dich an dein Leben vor der"
 msgstr ""
 
 #: scene7.xml:34
-msgid "Even the great"
+msgid  "Even the great"
 msgstr ""
 
 #: scene7.xml:35
-msgid "I hope you have"
+msgid  "I hope you have"
 msgstr ""
 
 #: scene7.xml:27
-msgid "I know enough people,"
+msgid  "I know enough people,"
 msgstr ""
 
 #: scene7.xml:41
-msgid "Just a moment please."
+msgid  "Just a moment please."
 msgstr ""
 
 #: scene7.xml:43
-msgid "Looks like a..."
+msgid  "Looks like a..."
 msgstr ""
 
 #: scene7.xml:11
-msgid "Quest description"
+msgid  "Quest description"
 msgstr ""
 
 #: scene7.xml:9
-msgid "Quest finished"
+msgid  "Quest finished"
 msgstr ""
 
 #: scene7.xml:26
-msgid "Sometimes I wish,"
+msgid  "Sometimes I wish,"
 msgstr ""
 
 #: scene7.xml:15
-msgid "Soren Windclaw"
+msgid  "Soren Windclaw"
 msgstr ""
 
 #: scene7.xml:2
-msgid "The Poolmonster"
+msgid  "The Poolmonster"
 msgstr ""
 
 #: scene7.xml:40
-msgid "We have to go now."
+msgid  "We have to go now."
 msgstr ""
 
 #: scene7.xml:42
-msgid "Whats that on the water over there?"
+msgid  "Whats that on the water over there?"
 msgstr ""
 
 #: scene7.xml:36
-msgid "Why has it really"
+msgid  "Why has it really"
 msgstr ""
 
 #: scene7.xml:21
-msgid "Wow, thats beautiful."
+msgid  "Wow, thats beautiful."
 msgstr ""
 
 #: scene7.xml:59
-msgid "greyCurseLake"
+msgid  "greyCurseLake"
 msgstr ""
+
