--- a/share/translation/potfiles/menu.pot
+++ b/share/translation/potfiles/menu.pot
@@ -10,7 +10,7 @@ msgstr ""
 "#-#-#-#-#  menu.pot (PACKAGE VERSION)  #-#-#-#-#\n"
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-03 19:07+0100\n"
+"POT-Creation-Date: 2012-03-08 13:45-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,10 +18,15 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  menu.poe  #-#-#-#-#\n"
+"#-#-#-#-#  menu.poe (PACKAGE VERSION)  #-#-#-#-#\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: \n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../src/core/damage.cpp:158 ../../src/gui/charinfo.cpp:673
 msgid "Physical"
@@ -711,7 +716,7 @@ msgstr ""
 msgid "Chest"
 msgstr ""
 
-#: ../../src/gui/worldmap.cpp:156
+#: ../../src/gui/worldmap.cpp:168
 msgid "Town Portal"
 msgstr ""
 
