--- a/share/translation/potfiles/the_ambush.pot
+++ b/share/translation/potfiles/the_ambush.pot
@@ -1,3 +1,4 @@
+#, fuzzy
 msgid ""
 msgstr ""
 "MIME-Version: 1.0\n"
@@ -6,108 +7,110 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: de\n"
+"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+
 #: theAmbush.xml:7
-msgid ""
-"A female council-mage by the name of Ireana of Northborough seems to be in "
-"trouble west of Dwarfenwall. Nothing a Branded One couldn't solve. If she "
-"survives long enough..."
+msgid  "A female council-mage by the name of Ireana of Northborough seems to be in trouble west of Dwarfenwall. Nothing a Branded One couldn't solve. If she survives long enough..."
 msgstr ""
 
-#: theAmbush.xml:136 theAmbush.xml:147
-msgid "Alright already, safe your breath!"
+#: theAmbush.xml:136
+#: theAmbush.xml:147
+msgid  "Alright already, safe your breath!"
 msgstr ""
 
-#: theAmbush.xml:135 theAmbush.xml:146
-msgid "Argh! Do I have to-"
+#: theAmbush.xml:135
+#: theAmbush.xml:146
+msgid  "Argh! Do I have to-"
 msgstr ""
 
-#: theAmbush.xml:120 theAmbush.xml:123
-msgid "Don't start to argue and help her! She needs your help!"
+#: theAmbush.xml:120
+#: theAmbush.xml:123
+msgid  "Don't start to argue and help her! She needs your help!"
 msgstr ""
 
 #: theAmbush.xml:29
-msgid "Dwarfenwall is in that direction. I shouldn't go this way yet."
+msgid  "Dwarfenwall is in that direction. I shouldn't go this way yet."
 msgstr ""
 
 #: theAmbush.xml:105
-msgid "I am making haste, alright?"
+msgid  "I am making haste, alright?"
 msgstr ""
 
 #: theAmbush.xml:117
-msgid ""
-"I thought she was one of your fancy elementalist amazones. Can't she look "
-"after herself?"
+msgid  "I thought she was one of your fancy elementalist amazones. Can't she look after herself?"
 msgstr ""
 
-#: theAmbush.xml:128 theAmbush.xml:140
-msgid "I'm not sure..."
+#: theAmbush.xml:128
+#: theAmbush.xml:140
+msgid  "I'm not sure..."
 msgstr ""
 
 #: theAmbush.xml:5
-msgid ""
-"Ireana survived and, as a token of her gratitude, provided our next job. I "
-"always knew the councilmen only wanted an exterminator."
+msgid  "Ireana survived and, as a token of her gratitude, provided our next job. I always knew the councilmen only wanted an exterminator."
 msgstr ""
 
 #: theAmbush.xml:2
-msgid "The Ambush"
+msgid  "The Ambush"
 msgstr ""
 
 #: theAmbush.xml:113
-msgid "The archmage Ireana of Northborough"
+msgid  "The archmage Ireana of Northborough"
 msgstr ""
 
 #: theAmbush.xml:149
-msgid "The firefighters are on the way."
+msgid  "The firefighters are on the way."
 msgstr ""
 
 #: theAmbush.xml:111
-msgid "The prince's fiancé is in danger."
+msgid  "The prince's fiancé is in danger."
 msgstr ""
 
 #: theAmbush.xml:104
-msgid "Wait!"
+msgid  "Wait!"
 msgstr ""
 
 #: theAmbush.xml:108
-msgid "We are making haste, alright?"
+msgid  "We are making haste, alright?"
 msgstr ""
 
-#: theAmbush.xml:130 theAmbush.xml:143
-msgid "Well, it couldn't really hurt..."
+#: theAmbush.xml:130
+#: theAmbush.xml:143
+msgid  "Well, it couldn't really hurt..."
 msgstr ""
 
 #: theAmbush.xml:138
-msgid "What do you think, friends, do we want to bail someone out?"
+msgid  "What do you think, friends, do we want to bail someone out?"
 msgstr ""
 
 #: theAmbush.xml:126
-msgid "What do you think? Shall we bail someone out?"
+msgid  "What do you think? Shall we bail someone out?"
 msgstr ""
 
 #: theAmbush.xml:116
-msgid "What?"
+msgid  "What?"
 msgstr ""
 
 #: theAmbush.xml:112
-msgid "Who?"
+msgid  "Who?"
 msgstr ""
 
 #: theAmbush.xml:114
-msgid "Will that be payed extra?"
+msgid  "Will that be payed extra?"
 msgstr ""
 
-#: theAmbush.xml:133 theAmbush.xml:145
-msgid "Will that be payed extra??"
+#: theAmbush.xml:133
+#: theAmbush.xml:145
+msgid  "Will that be payed extra??"
 msgstr ""
 
-#: theAmbush.xml:106 theAmbush.xml:109
-msgid "You have to go into the western woods right now."
+#: theAmbush.xml:106
+#: theAmbush.xml:109
+msgid  "You have to go into the western woods right now."
 msgstr ""
 
 #: theAmbush.xml:11
-msgid "aisWolfstones"
+msgid  "aisWolfstones"
 msgstr ""
+
