--- a/share/translation/potfiles/the_goblinslayer.pot
+++ b/share/translation/potfiles/the_goblinslayer.pot
@@ -1,3 +1,4 @@
+#, fuzzy
 msgid ""
 msgstr ""
 "MIME-Version: 1.0\n"
@@ -6,89 +7,91 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: de\n"
+"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+
 #: goblins.xml:36
-msgid "Accept the quest?"
+msgid  "Accept the quest?"
 msgstr ""
 
 #: goblins.xml:19
-msgid "Goblins"
+msgid  "Goblins"
 msgstr ""
 
 #: goblins.xml:43
-msgid "Goblins (reward)"
+msgid  "Goblins (reward)"
 msgstr ""
 
 #: goblins.xml:61
-msgid "Have fun then."
+msgid  "Have fun then."
 msgstr ""
 
 #: goblins.xml:26
-msgid "I have killed them all."
+msgid  "I have killed them all."
 msgstr ""
 
 #: goblins.xml:34
-msgid "If you kill 10 of 'em, I'll give you a precious reward."
+msgid  "If you kill 10 of 'em, I'll give you a precious reward."
 msgstr ""
 
 #: goblins.xml:35
-msgid "Interested?"
+msgid  "Interested?"
 msgstr ""
 
 #: goblins.xml:30
-msgid "Leave me alone and kill some more goblins."
+msgid  "Leave me alone and kill some more goblins."
 msgstr ""
 
 #: goblins.xml:60
-msgid "Nearly done."
+msgid  "Nearly done."
 msgstr ""
 
 #: goblins.xml:38
-msgid "No"
+msgid  "No"
 msgstr ""
 
 #: goblins.xml:50
-msgid "Of course!"
+msgid  "Of course!"
 msgstr ""
 
 #: goblins.xml:9
-msgid "Quest finished"
+msgid  "Quest finished"
 msgstr ""
 
 #: goblins.xml:2
-msgid "The goblinslayer"
+msgid  "The goblinslayer"
 msgstr ""
 
 #: goblins.xml:51
-msgid "Then I'll give you this goblin club. Be happy."
+msgid  "Then I'll give you this goblin club. Be happy."
 msgstr ""
 
 #: goblins.xml:33
-msgid "There are some stupid goblins pissing me off."
+msgid  "There are some stupid goblins pissing me off."
 msgstr ""
 
 #: goblins.xml:27
-msgid "Wow... you're a real hero, aren't ya?"
+msgid  "Wow... you're a real hero, aren't ya?"
 msgstr ""
 
 #: goblins.xml:37
-msgid "Yes"
+msgid  "Yes"
 msgstr ""
 
 #: goblins.xml:49
-msgid "You want a second reward?"
+msgid  "You want a second reward?"
 msgstr ""
 
 #: goblins.xml:18
-msgid "peasant"
+msgid  "peasant"
 msgstr ""
 
 #: goblins.xml:90
-msgid "region1"
+msgid  "region1"
 msgstr ""
 
 #: goblins.xml:12
-msgid "you killed enough goblins"
+msgid  "you killed enough goblins"
 msgstr ""
+
