Fix of mantis bug #63: http://sumwars.org/mantis/view.php?id=63

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,20 +13,20 @@
 =Ben Anderman (crimson_penguin)
 	
 [D Graphics]
-=Andreas Schönefeldt
-=Steffen Schönefeldt (Kalimgard)
+=Andreas SchÃ¶nefeldt
+=Steffen SchÃ¶nefeldt (Kalimgard)
 =Christian Wittmann (psycho)
 =Francesco Miglietta (hal9000)
 =Adam Preisler (Alfisko)
 =Simeon Dear (Trilby)
 
 [E Scripting]
-=Steffen Schönefeldt (Kalimgard)
+=Steffen SchÃ¶nefeldt (Kalimgard)
 =Hans Wulf (Lastmerlin)
 	
 [F Story]
-=Steffen Schönefeldt (Kalimgard)
-=Andreas Schönefeldt
+=Steffen SchÃ¶nefeldt (Kalimgard)
+=Andreas SchÃ¶nefeldt
 
 [G Sounds]
 =Michael Kempf (Hangman)
@@ -38,7 +38,7 @@
 =Cheeselord
 
 [I Translation]
-=Steffen Schönefeldt (Kalimgard)
+=Steffen SchÃ¶nefeldt (Kalimgard)
 =Michael Kempf (Hangman)
 =kroni
 =Brian Jeffears (getter77)
@@ -53,6 +53,6 @@
 =Stefan Stammberger (fusion44)
 
 [K Website]
-=Andreas Schönefeldt 
+=Andreas SchÃ¶nefeldt 
 =Michael Kempf (Hangman)
 =Michael Kunz (Protogenes)
