--- a/share/translation/de/defend_dwarfenwall.po
+++ b/share/translation/de/defend_dwarfenwall.po
@@ -9,8 +9,8 @@ msgstr ""
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
 "PO-Revision-Date: 2013-05-10 20:17+0200\n"
 "Last-Translator: Stefan Stammberger <some.fusion@gmail.com>\n"
-"Language-Team: German "
-"<http://hosted.weblate.org/projects/sumwars/defend_dwarfenwall/de/>\n"
+"Language-Team: German <http://hosted.weblate.org/projects/sumwars/"
+"defend_dwarfenwall/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
