--- a/share/translation/de/fortify_dwarfenwall.po
+++ b/share/translation/de/fortify_dwarfenwall.po
@@ -9,8 +9,8 @@ msgstr ""
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
 "PO-Revision-Date: 2013-05-14 16:39+0200\n"
 "Last-Translator: Chris Oelmueller <chris.oelmueller@gmail.com>\n"
-"Language-Team: German "
-"<http://hosted.weblate.org/projects/sumwars/fortify_dwarfenwall/de/>\n"
+"Language-Team: German <http://hosted.weblate.org/projects/sumwars/"
+"fortify_dwarfenwall/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
