--- a/share/translation/it/the_trader.po
+++ b/share/translation/it/the_trader.po
@@ -13,8 +13,8 @@ msgstr ""
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
 "PO-Revision-Date: 2013-05-22 10:10+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
-"Language-Team: Italian "
-"<http://hosted.weblate.org/projects/sumwars/the_trader/it/>\n"
+"Language-Team: Italian <http://hosted.weblate.org/projects/sumwars/"
+"the_trader/it/>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
