--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@
 =Patrick McMunn (PaddyMac)
 =Igor Paliychuk (igorko)
 =Eugenio Fagioli (NoobAtThis)
+=Rubén Viguera Marañón (vyguera)
 
 [J Build system]
 =Stefan Stammberger (fusion44)
