--- a/INSTALL
+++ b/INSTALL
@@ -4,12 +4,12 @@ Following libraries are required to build Summoning Wars:
 
 OGRE >= 1.7.3
 OIS
-CEGUI >= 0.7.5
+CEGUI >= 0.8.0
 freealut, openal
 lua5.1
 ogg, vorbis, vorbisfile
 physfs
-POCO (for debug build only)
+boost components: filesystem system date_time chrono thread)
 
 If you are lucky, all libs may be installed via package manager (apt-get, yum, emerge, pacman, ...).
 Have a look at the "OS dependant install" section below.
